Fixed gesture navigation flicker on iOS bug; Added mutation observer to SETs; Fixed default route behaviour

--- a/example/src/css/Cards.css
+++ b/example/src/css/Cards.css
@@ -30,7 +30,6 @@
   z-index: 1;
 }
 .cards .card-bg {
-  width: 345px;
   height: 291px;
   position: absolute;
   border-radius: 15px;
